@@ -1,0 +1,11 @@
+<?xml version='1.0'?>
+<!DOCTYPE platform_description SYSTEM "surfxml.dtd">
+<platform_description>
+  <process host="Tremblay" function="server">
+     <argument value="4000"/>       <!-- port number -->
+  </process>
+  <process host="Fafard" function="client">
+     <argument value="Tremblay"/>   <!-- server host -->
+     <argument value="4000"/>       <!-- port number -->
+  </process>
+</platform_description>
