@@ -1,0 +1,9 @@
+#! @BASH@
+if [ x@EXEEXT@ = x ] ; then 
+  exenv=$SG_TEST_EXENV
+else
+  exenv=wine
+fi
+
+exec $exenv ./mmrpc_simulator@EXEEXT@ @top_srcdir@/examples/msg/small_platform.xml @srcdir@/mmrpc_deployment.xml $@
+
